# politek_sem

./: .gitignore
dkz_labs/: dkz_1_vashchyshyn.docx  dkz_2_vashchyshyn.docx  dkz_3_vashchyshyn.docx  dkz_4_vashchyshyn.docx  dkz_5_vashchyshyn.docx  lab2_vashchyshyn.docx  system.diagnostics.json
dkz_labs/py_src/lab_five/: fib_large_test.sh  lorem_10_words_test.sh  webserv.py
dkz_labs/py_src/lab_four/: app.py
dkz_labs/py_src/lab_one/: sys_info.py
dkz_labs/py_src/lab_three/: ollama_query.py
dkz_labs/py_src/lab_two/: diag_storages.py
pro_labs/: CMakeLists.txt  Readme.md  lab2_dep_diag.drawio  lab2_dep_diag_better.drawio
pro_labs/include/: mpi_calculations.h
pro_labs/include/payload/: mpi_payload.h  mpi_payload_print.h
pro_labs/include/vars/: mpi_var_input_factory.h  mpi_var_linear.h  mpi_var_manual.h  mpi_var_print.h  mpi_var_rand.h  mpi_vars.h
pro_labs/src/lab_one/: README.md  main.cpp
pro_labs/src/lab_three/: main.cpp
pro_labs/src/lab_two/: main.c
pro_labs/src/lab_two_single_thd/: main.c
pro_labs/tests/: CMakeLists.txt  README.md  mat_add.t.c  mat_mul.t.c  mat_transposition.t.c  mat_vec_mul.t.c  vec_add.t.c  vec_column_row_mult.t.c  vec_mult.t.c  vec_row_column_mult.t.c
spz_labs/: CMakeLists.txt  Readme.md  СПЗ_ЛАБ1_Ващишин.docx  СПЗ_ЛАБ2_Ващишин.docx  СПЗ_ЛАБ3_Ващишин.docx  СПЗ_ЛАБ4_Ващишин.docx  СПЗ_ЛАБ5_Ващишин.docx
spz_labs/src/lab_five_client/: main.cpp
spz_labs/src/lab_five_server/: main.cpp
spz_labs/src/lab_four/: main.cpp
spz_labs/src/lab_one/: main.cpp
spz_labs/src/lab_one_executor/: main.cpp
spz_labs/src/lab_three/: main.cpp
spz_labs/src/lab_two/: main.cpp
ziks_labs/: CMakeLists.txt  Readme.md  Зікс_Лаб1_Ващишин.docx  Зікс_Лаб2_Ващишин.docx
ziks_labs/py_src/lab_two/: lab_two.py
ziks_labs/src/lab_one/: main.cpp
